--- a/recipe.yml
+++ b/recipe.yml
@@ -1,5 +1,5 @@
 name: Custom Vanilla Desktop # Replace this name with your image name
-id: custom # Replace this ID with your image ID
+id: custom-test # Replace this ID with your image ID
 stages:
 - id: build
   base: ghcr.io/vanilla-os/desktop:main # Optionally, Replace this image URL with a different one i.e. nvidia:main, etc
@@ -11,8 +11,7 @@ stages:
   
   # Commands to run first before building the modules
   runs:
-    commands:
-      - echo 'APT::Install-Recommends "1";' > /etc/apt/apt.conf.d/01norecommends
+  - echo 'APT::Install-Recommends "1";' > /etc/apt/apt.conf.d/01norecommends
 
   modules:
   - name: init-setup
@@ -21,27 +20,49 @@ stages:
     - lpkg --unlock
     - apt-get update
 
-  # Put your custom actions below this comment
-
-  - name: example-packages # Sample module using the built-in Apt module to install packages
-    type: apt
-    source:
-      packages:
-      - vim
-
-  - name: example-commands # Sample module demonstrating the Shell module with custom commands
-    type: shell
-    commands:
-    - echo Example output
-
-  - name: example-modules # Sample module demonstrating importing local and remote modules
+  # Put your custom actions behind this comment
+  - name: modules # Sample module demonstrating importing local and remote modules
     type: includes
     includes:
       - modules/50-install-debs.yml # Sample local module present in this repository
-      # - gh:vanilla-os/dev-image:main:modules/00-basics.yml # Sample GitHub remote module in the format: `gh:your-name/your-repo:branch:modules/file.yml`
-      # - https://raw.githubusercontent.com/Vanilla-OS/dev-image/main/modules/05-go.yml # Sample full URL remote module
+      - gh:vanilla-os/dev-image:main:modules/00-basics.yml # Sample GitHub remote module in the format: `gh:your-name/your-repo:branch:modules/file.yml`
+      - https://raw.githubusercontent.com/Vanilla-OS/dev-image/main/modules/05-go.yml # Sample full URL remote module
+      
+  - name: libvirt-packages
+    type: apt
+    source:
+      packages:
+      - qemu-kvm
+      - libvirt-daemon
+      - bridge-utils
+      - virtinst
+      - libvirt-daemon-system
+      #- libguestfs-tools
+      - libosinfo-bin
+      - qemu-system
+      - virt-manager
 
-  # Put your custom actions above this comment
+  - name: lookingglass-packages
+    type: apt
+    source:
+      packages:
+      - libxpresent1
+      - libbinutils
+      - dkms
+
+
+
+  - name: install-tailscale # Sample module demonstrating the Shell module with custom commands
+    type: shell
+    commands:
+    - mkdir -p --mode=0755 /usr/share/keyrings
+    - curl -fsSL https://pkgs.tailscale.com/stable/debian/sid.noarmor.gpg | tee /usr/share/keyrings/tailscale-archive-keyring.gpg >/dev/null
+    - curl -fsSL https://pkgs.tailscale.com/stable/debian/sid.tailscale-keyring.list | tee /etc/apt/sources.list.d/tailscale.list
+    - apt-get update && apt-get install -y tailscale
+
+
+
+  # Put your custom actions before this comment
 
   - name: set-image-name-abroot
     type: includes
