--- a/recipe.yml
+++ b/recipe.yml
@@ -9,9 +9,10 @@ stages:
   args:
     DEBIAN_FRONTEND: noninteractive # Set the image environment as non-interactive
   
-  # Commands to run first before building the modules
+ # Commands to run first before building the modules
   runs:
-  - echo 'APT::Install-Recommends "1";' > /etc/apt/apt.conf.d/01norecommends
+    commands:
+      - echo 'APT::Install-Recommends "1";' > /etc/apt/apt.conf.d/01norecommends
 
   modules:
   - name: init-setup
