--- a/recipe.yml
+++ b/recipe.yml
@@ -1,5 +1,6 @@
 name: Tailscale and VM VanillaOS# Replace this name with your image name
 id: vanilla-vib # Replace this ID with your image ID
+version: 1.0.0
 stages:
 - id: build
   base: ghcr.io/vanilla-os/desktop:main # Optionally, Replace this image URL with a different one i.e. nvidia:main, etc
